--- a/tauri-app/src/windows/sql/sql.html
+++ b/tauri-app/src/windows/sql/sql.html
@@ -1,4 +1,4 @@
-<!-- src/windows/sql.html -->
+<!-- src/windows/SQL/SQL.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/windows/sql.tsx"></script> <!-- ✅ 一定要絕對路徑 -->
+    <script type="module" src="/src/windows/sql/sql.tsx"></script> <!-- ✅ 一定要絕對路徑 -->
   </body>
 </html>
